// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no props 1`] = `
.c0 {
  color: #002;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: hidden;
}

<div
  className="c0"
  color="#002"
/>
`;

exports[`renders correctly with show and type="alert-danger" props 1`] = `
.c0 {
  color: #b44;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  color="#b44"
  type="alert-danger"
>
  error message
</div>
`;

exports[`renders correctly with show and type="alert-success" props 1`] = `
.c0 {
  color: #3a3;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  color="#3a3"
  type="alert-success"
>
  error message
</div>
`;

exports[`renders correctly with show and type="hint" props 1`] = `
.c0 {
  color: #a3f;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  color="#a3f"
  type="hint"
>
  error message
</div>
`;

exports[`renders correctly with show prop 1`] = `
.c0 {
  color: #002;
  font-size: 12px;
  font-weight: 200;
  width: 100%;
  height: 16px;
  margin: 5px 0;
  padding: 0;
  visibility: visible;
}

<div
  className="c0"
  color="#002"
>
  message
</div>
`;
